--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-lg-6">
-                    <h1 class="main-section_title pt-4 pb-3">Porta tu crédito y <strong>diminuye la cuota hasta la mitad</strong></h1>
+                    <h1 class="main-section_title pt-4 pb-3">Porta tu crédito y <strong>disminuye la cuota hasta la mitad</strong></h1>
 
 
                 </div>
